# s3-studio

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  release.sh  vite.config.ts
.github/workflows/: release.yml
docs/: index.html  robots.txt  site.webmanifest  sitemap.xml
src/: App.css  App.tsx  index.css  main.tsx  tauri-api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: aws_clients.rs  cloudfront_ops.rs  lib.rs  main.rs  models.rs  profiles.rs  s3_ops.rs  utils.rs
src/components/: AppHeader.css  AppHeader.tsx  BrowserPane.css  BrowserPane.tsx  BucketPane.css  BucketPane.tsx  ContextMenu.css  ContextMenu.tsx  DetailsPane.css  DetailsPane.tsx  InvalidationDialog.css  InvalidationDialog.tsx  PermissionsPanel.css  PermissionsPanel.tsx  ToastStack.css  ToastStack.tsx
src/components/DetailsPane/: BucketDetails.tsx  CloudFrontPanel.css  CloudFrontPanel.tsx  CopyUrlRow.tsx  FolderDetails.tsx  ObjectDetails.tsx  ObjectPreviewPanel.tsx  index.tsx
src/components/ui/: Badge.css  Badge.tsx  Button.css  Button.tsx  Card.css  Card.tsx  CheckRow.css  CheckRow.tsx  Checkbox.tsx  EmptyState.css  EmptyState.tsx  IconButton.css  IconButton.tsx  Input.css  Input.tsx  Modal.css  Modal.tsx  PanelHeading.css  PanelHeading.tsx  ProgressBar.css  ProgressBar.tsx  SearchBox.css  SearchBox.tsx  SectionHeading.css  SectionHeading.tsx  Select.css  (+4 more)
src/hooks/: useToasts.ts
src/styles/: base.css  components.css  layout.css  tokens.css
src/utils/: format.ts
