[package]
name = "aws-s3-cloudfront-studio"
version = "0.1.0"
description = "Desktop S3 and CloudFront operations console"
authors = ["S3 CloudFront Studio"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "aws_s3_cloudfront_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-cloudfront = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
base64 = "0.22"
mime_guess = "2"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
walkdir = "2"
